--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <select name="select-template" class="gui" id="template-selection">
           <option value="squared">Kvadratisk</option>
-          <option value="landscape">Landskabe</option>
+          <option value="landscape">Landskab</option>
           <option value="portrait">Portræt</option>
           <option value="price-tag">Prismærkat</option>
           <option value="postcard">Postkort</option>
